--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,50 @@
-node_modules
-backend/node_modules
-frontend/node_modules
-infra/.env
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Environment files
 .env
-dist
+.env.local
+.env.production
+.env*.local
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS
 .DS_Store
-EOF
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Docker
+.dockerignore
+
+# Strapi
+.cache/
+.tmp/
+backend/.strapi-updater.json
+backend/public/uploads/*
+!backend/public/uploads/.gitkeep
+
+# Database
+*.sql
+*.sqlite
+postgres_data/
+postgres_prod_data/
+
+# SSL
+certbot/
