--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,12 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push:
@@ -26,14 +27,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Convert repository name to lowercase
+        id: lowercase
+        run: echo "repo=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
           context: ./backend
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}-backend:latest
-            ${{ env.REGISTRY }}/${{ github.repository }}-backend:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ steps.lowercase.outputs.repo }}-backend:latest
+            ${{ env.REGISTRY }}/${{ steps.lowercase.outputs.repo }}-backend:${{ github.sha }}
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v4
@@ -42,13 +47,13 @@ jobs:
           target: production
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}-frontend:latest
-            ${{ env.REGISTRY }}/${{ github.repository }}-frontend:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ steps.lowercase.outputs.repo }}-frontend:latest
+            ${{ env.REGISTRY }}/${{ steps.lowercase.outputs.repo }}-frontend:${{ github.sha }}
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
@@ -57,7 +62,7 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.VPS_USERNAME }}/my-app
+            cd /root/zadar-museum
             docker compose -f docker-compose.vps.yml pull
             docker compose -f docker-compose.vps.yml up -d
             docker system prune -af
