--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -29,6 +29,17 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Serve uploaded media from Strapi
+        location ^~ /uploads/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         location /api {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -47,6 +58,9 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
     }
