--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -14,7 +14,7 @@ http {
     # HTTP redirect to HTTPS
     server {
         listen 80;
-        server_name yourdomain.com www.yourdomain.com;
+        server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
         
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -27,11 +27,12 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
-        server_name yourdomain.com www.yourdomain.com;
+        listen 443 ssl;
+        http2 on;
+        server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
 
-        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ovdjejekosarkasve.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ovdjejekosarkasve.com/privkey.pem;
         
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
@@ -43,6 +44,17 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Serve uploaded media from Strapi (backend). Strapi exposes files under /uploads
+        location ^~ /uploads/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -68,6 +80,9 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
     }
