--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -48,6 +48,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -59,6 +61,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -71,6 +75,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -81,6 +87,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -91,6 +99,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -101,6 +111,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -112,6 +124,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -122,6 +136,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -134,6 +150,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -152,7 +170,8 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl http2 default_server;
+        listen [::]:443 ssl http2 default_server;
         server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
 
         ssl_certificate /etc/letsencrypt/live/ovdjejekosarkasve.com/fullchain.pem;
