nginx: proxy /users-permissions to backend (Strapi) to avoid 405 on POST

--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -150,6 +150,35 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Ensure users-permissions requests are proxied to the backend (Strapi)
+            # so POST /users-permissions/roles and similar admin plugin endpoints
+            # are handled by Strapi instead of the frontend/static server.
+            
+        }
+
+        location ^~ /users-permissions/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location ^~ /users-permissions {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
+            proxy_cache_bypass $http_upgrade;
+        }
             proxy_set_header Authorization $http_authorization;
             proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
@@ -280,6 +309,33 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Proxy users-permissions plugin endpoints to Strapi backend so admin
+        # POST requests (for example /users-permissions/roles) aren't handled
+        # by the frontend and rejected with 405 by nginx/static server.
+        location ^~ /users-permissions/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location ^~ /users-permissions {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
