nginx: fix malformed nginx.vps.conf (syntax, duplicate blocks)

--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -11,189 +11,23 @@ http {
         server frontend:80;
     }
 
-    # HTTP redirect to HTTPS
+    # common proxy headers
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
+    # HTTP redirect to HTTPS and serve ACME challenge
     server {
         listen 80;
         server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
-        
+
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
 
         location / {
             return 301 https://$host$request_uri;
-        }
-    }
-
-    # HTTPS server
-    server {
-        listen 443 ssl;
-        http2 on;
-        server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
-
-        ssl_certificate /etc/letsencrypt/live/ovdjejekosarkasve.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ovdjejekosarkasve.com/privkey.pem;
-        
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        client_max_body_size 50M;
-
-        location /admin {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Serve uploaded media from Strapi (backend). Strapi exposes files under /uploads
-        location ^~ /uploads/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Proxy Strapi APIs and admin plugin endpoints that are not under /admin or /api
-        # These endpoints are used by admin plugins (content-manager, content-type-builder, upload)
-        location ^~ /content-manager/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /content-manager {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /content-type-builder/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /content-type-builder {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Upload plugin backend endpoints
-        location ^~ /upload/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /upload {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /api {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            # Ensure users-permissions requests are proxied to the backend (Strapi)
-            # so POST /users-permissions/roles and similar admin plugin endpoints
-            # are handled by Strapi instead of the frontend/static server.
-            
-        }
-
-        location ^~ /users-permissions/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /users-permissions {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location / {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -218,11 +52,12 @@ http {
             log_not_found off;
         }
 
-        location /admin {
+        # Admin UI (Strapi)
+        location ^~ /admin {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -230,6 +65,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Static uploads proxied to backend
         location ^~ /uploads/ {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -240,16 +76,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location ^~ /content-manager/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
+        # Strapi plugin endpoints
         location ^~ /content-manager {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -260,27 +87,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location ^~ /content-type-builder/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
         location ^~ /content-type-builder {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location ^~ /upload/ {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -304,26 +111,11 @@ http {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Proxy users-permissions plugin endpoints to Strapi backend so admin
-        # POST requests (for example /users-permissions/roles) aren't handled
-        # by the frontend and rejected with 405 by nginx/static server.
-        location ^~ /users-permissions/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -334,16 +126,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
-            proxy_set_header Cookie $http_cookie;
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Frontend static app
         location / {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
