feat(frontend): support VITE_API_ROOT build-arg and pass it in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: development
+      args:
+        VITE_API_ROOT: ${VITE_API_ROOT}
     container_name: react_dev
     volumes:
       - ./frontend:/app
