--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,6 +42,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: production
+      args:
+        VITE_API_ROOT: ${VITE_API_ROOT}
     container_name: react_prod_local
     depends_on:
       - backend
