--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -141,5 +141,18 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
+
+        add_header 'Access-Control-Allow-Origin' 'https://ovdjejekosarkasve.com' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+
+        # Respond to OPTIONS preflight fast
+        if ($request_method = OPTIONS ) {
+          add_header 'Access-Control-Max-Age' 1728000;
+          add_header 'Content-Type' 'text/plain; charset=utf-8';
+          add_header 'Content-Length' 0;
+          return 204;
+        }
     }
 }
