nginx: resolve docker service names at runtime (use resolver and variables)

--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -3,13 +3,11 @@ events {
 }
 
 http {
-    upstream backend {
-        server backend:1337;
-    }
-
-    upstream frontend {
-        server frontend:80;
-    }
+    # Use Docker embedded DNS resolver so nginx can resolve service names at runtime
+    resolver 127.0.0.11 valid=30s ipv6=off;
+    # backend and frontend service host:port (resolved at runtime)
+    set $backend "backend:1337";
+    set $frontend "frontend:80";
 
     # common proxy headers
     map $http_upgrade $connection_upgrade {
@@ -54,7 +52,7 @@ http {
 
         # Admin UI (Strapi)
         location ^~ /admin {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
@@ -67,7 +65,7 @@ http {
 
         # Static uploads proxied to backend
         location ^~ /uploads/ {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -78,7 +76,7 @@ http {
 
         # Strapi plugin endpoints
         location ^~ /content-manager {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -88,7 +86,7 @@ http {
         }
 
         location ^~ /content-type-builder {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -98,7 +96,7 @@ http {
         }
 
         location ^~ /upload {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -108,7 +106,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
@@ -120,7 +118,7 @@ http {
         }
 
         location ^~ /users-permissions {
-            proxy_pass http://backend;
+            proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -131,7 +129,7 @@ http {
 
         # Frontend static app
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://$frontend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
