--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -6,8 +6,12 @@ http {
     # Use Docker embedded DNS resolver so nginx can resolve service names at runtime
     resolver 127.0.0.11 valid=30s ipv6=off;
     # backend and frontend service host:port (resolved at runtime)
-    set $backend "backend:1337";
-    set $frontend "frontend:80";
+    map $host $backend {
+        default backend:1337;
+    }
+    map $host $frontend {
+        default frontend:80;
+    }
 
     # common proxy headers
     map $http_upgrade $connection_upgrade {
