nginx(vps): move CORS add_header to http context and keep preflight handler

--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -13,6 +13,12 @@ http {
         default frontend:80;
     }
 
+    # Global CORS headers applied to responses (use 'always' to include on 4xx/5xx)
+    add_header 'Access-Control-Allow-Origin' 'https://ovdjejekosarkasve.com' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+
     # common proxy headers
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -144,17 +150,12 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        add_header 'Access-Control-Allow-Origin' 'https://ovdjejekosarkasve.com' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
-
-        # Respond to OPTIONS preflight fast
-        if ($request_method = OPTIONS ) {
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Content-Type' 'text/plain; charset=utf-8';
-          add_header 'Content-Length' 0;
-          return 204;
-        }
+                # Respond to OPTIONS preflight fast
+                if ($request_method = OPTIONS ) {
+                    add_header 'Access-Control-Max-Age' 1728000;
+                    add_header 'Content-Type' 'text/plain; charset=utf-8';
+                    add_header 'Content-Length' 0;
+                    return 204;
+                }
     }
 }
