--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -18,6 +18,7 @@ http {
     add_header 'Access-Control-Allow-Credentials' 'true' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
     add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+    add_header 'Access-Control-Max-Age' '1728000' always;
 
     # common proxy headers
     map $http_upgrade $connection_upgrade {
@@ -152,9 +153,6 @@ http {
 
                 # Respond to OPTIONS preflight fast
                 if ($request_method = OPTIONS ) {
-                    add_header 'Access-Control-Max-Age' 1728000;
-                    add_header 'Content-Type' 'text/plain; charset=utf-8';
-                    add_header 'Content-Length' 0;
                     return 204;
                 }
     }
