--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -13,12 +13,7 @@ http {
         default frontend:80;
     }
 
-    # Global CORS headers applied to responses (use 'always' to include on 4xx/5xx)
-    add_header 'Access-Control-Allow-Origin' 'https://ovdjejekosarkasve.com' always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
-    add_header 'Access-Control-Max-Age' '1728000' always;
+    # (Moved CORS headers into the HTTPS server block to avoid "add_header not allowed here" in some nginx configs)
 
     # common proxy headers
     map $http_upgrade $connection_upgrade {
@@ -42,8 +37,10 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2 default_server;
-        listen [::]:443 ssl http2 default_server;
+        # use the non-deprecated http2 directive in the server context
+        listen 443 ssl default_server;
+        listen [::]:443 ssl default_server;
+        http2;
         server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
 
         ssl_certificate /etc/letsencrypt/live/ovdjejekosarkasve.com/fullchain.pem;
@@ -53,6 +50,14 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         client_max_body_size 50M;
+
+    # CORS headers: reflect the incoming Origin so 'www' and non-'www' are both handled.
+    # NOTE: this reflects the client Origin header; ensure you only accept trusted origins in production
+    add_header Access-Control-Allow-Origin "$http_origin" always;
+    add_header Access-Control-Allow-Credentials "true" always;
+    add_header Access-Control-Allow-Methods "GET,POST,PUT,PATCH,DELETE,OPTIONS,HEAD" always;
+    add_header Access-Control-Allow-Headers "Authorization,Content-Type" always;
+    add_header Access-Control-Max-Age "1728000" always;
 
         # deny access to dotfiles (prevent leaking .env etc.)
         location ~ /\. {
