--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -51,13 +51,7 @@ http {
 
         client_max_body_size 50M;
 
-    # CORS headers: reflect the incoming Origin so 'www' and non-'www' are both handled.
-    # NOTE: this reflects the client Origin header; ensure you only accept trusted origins in production
-    add_header Access-Control-Allow-Origin "$http_origin" always;
-    add_header Access-Control-Allow-Credentials "true" always;
-    add_header Access-Control-Allow-Methods "GET,POST,PUT,PATCH,DELETE,OPTIONS,HEAD" always;
-    add_header Access-Control-Allow-Headers "Authorization,Content-Type" always;
-    add_header Access-Control-Max-Age "1728000" always;
+        # CORS is handled by Strapi backend - removing nginx CORS headers to avoid conflicts
 
         # deny access to dotfiles (prevent leaking .env etc.)
         location ~ /\. {
@@ -155,10 +149,5 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
-
-                # Respond to OPTIONS preflight fast
-                if ($request_method = OPTIONS ) {
-                    return 204;
-                }
     }
 }
