nginx: use http2 parameter on listen to match nginx version in container

--- a/nginx/nginx.vps.conf
+++ b/nginx/nginx.vps.conf
@@ -38,9 +38,9 @@ http {
     # HTTPS server
     server {
         # use the non-deprecated http2 directive in the server context
-        listen 443 ssl default_server;
-        listen [::]:443 ssl default_server;
-        http2;
+    # Use http2 parameter on the listen directive (deprecated warning is non-fatal)
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
         server_name ovdjejekosarkasve.com www.ovdjejekosarkasve.com;
 
         ssl_certificate /etc/letsencrypt/live/ovdjejekosarkasve.com/fullchain.pem;
