--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "start": "strapi start",
     "strapi": "strapi",
     "migrate:mvs": "node ./scripts/apply-mvs.js",
+    "refresh:team": "node ./scripts/refresh-team-views.js",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
