--- a/docker-compose.vps.yml
+++ b/docker-compose.vps.yml
@@ -15,6 +15,8 @@ services:
   backend:
     image: ghcr.io/litovicmateo/zadar-museum-backend:latest
     container_name: strapi_prod
+    volumes:
+      - strapi_uploads:/app/public/uploads
     environment:
       DATABASE_HOST: ${DATABASE_HOST}
       DATABASE_PORT: ${DATABASE_PORT}
@@ -74,6 +76,7 @@ services:
 
 volumes:
   postgres_prod_data:
+  strapi_uploads:
 
 networks:
   app_network:
