chore(frontend): fix build errors and compile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,9 @@ services:
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
       TRANSFER_TOKEN_SALT: ${TRANSFER_TOKEN_SALT}
       JWT_SECRET: ${JWT_SECRET}
-      CORS_ORIGINS: ${CORS_ORIGINS}
+      # Provide a sensible default for development so CORS isn't set to an empty string
+      # If you prefer to control this via an env file, remove this line and set CORS_ORIGINS there.
+      CORS_ORIGINS: "http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://localhost:1337"
       NODE_ENV: development
     ports:
       - "1337:1338"
